<resources>
    <string name="app_name">StarBasket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_hint">Search</string>
    <string name="action_cart">My Cart</string>
    <string name="decoration">Decoration</string>
    <string name="banner">Banner</string>
    <string name="vegetables">Vegetables</string>
    <string name="see_all">See All</string>
    <string name="product_image">Product Image</string>
    <string name="toast_back_press">Press back again to exist the app</string>

    <string name="content_description">Content Description</string>

    <string name="my_information">My Information</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_addresses">My Addresses</string>
    <string name="others">Others</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="submit">Submit</string>
    <string name="hint_cart">\u20B9 250 away from free delivery from this store</string>
    <string name="checkout">Checkout</string>
    <string name="format_cart_subtotal">Cart SubTotal (%d Item)</string>
    <string name="cart_estimated">Estimated Order Total</string>
    <string name="cart_shipping_charges">Estimated Shipping &amp; Handling</string>
    <string name="shipping_to">Shipping to:</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="add">Add</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="price">Price</string>
    <string name="unit">Unit</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_number">Order Number:</string>
    <string name="order_status">Order Status</string>
    <string name="call_us">Call Us</string>
    <string name="email_us">E-mail Us</string>
    <string name="delete">Delete</string>
    <string name="delete_address">Are you sure you wish to delete this address?</string>
    <string name="title_delete_address">Delete Address?</string>
    <string name="invalid_name">Enter a valid name</string>
    <string name="invalid_address">Enter a valid address</string>
    <string name="invalid_pincode">Enter valid pincode</string>

    <string name="title_update_app">Update Application</string>
    <string name="message_update_app">This version (%s) is no longer supported. Please update the app to enjoy our
		services</string>
    <string name="update">Update</string>
    <string name="exit_app">Exit App</string>
    <string name="no_internet">No internet connection</string>

    <!-- fonts -->
    <string name="font_light">fonts/celias_light.otf</string>
    <string name="font_medium">fonts/celias_medium.otf</string>
    <string name="font_bold">fonts/celias_bold.otf</string>
    <string name="loading_category">Loading categories…</string>
    <string name="loading_categories">Loading categories…</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="format_price">\u20B9 %.2f</string>
    <string name="pick_your_size">Pick your size</string>
    <string name="loading_product_details">Loading product details…</string>
    <string name="error_mobile">Invalid Mobile Number</string>
    <string name="error_otp">Invalid OTP</string>
    <string name="error_name">Invalid Name</string>
    <string name="error_email">Invalid Email</string>
    <string name="authenticating">Authenticating…</string>
    <string name="verifying">Verifying…</string>
    <string name="signing_up">Create an Account</string>
    <string name="signingup">Create Account</string>
    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="total_amount">Total Amount</string>
    <string name="updating_cart">Updating cart…</string>
    <string name="loading_cart_items">Loading cart items…</string>
    <string name="promo_code">Promo Code</string>
    <string name="items">Items:</string>
    <string name="delivery">Delivery:</string>
    <string name="amount_payable">Amount Payable:</string>
    <string name="select_payment">Select Payment:</string>
    <string name="loading_checkout_items">Loading checkout items…</string>
    <string name="sub_total">Sub Total:</string>
    <string name="discount">Discount:</string>
    <string name="loading_states">Loading states…</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="city">City</string>
    <string name="invalid_landmark">invalid Landmark</string>
    <string name="invalid_city">Invalid City</string>
    <string name="updating_address">Updating address…</string>
    <string name="delivery_date_time">Delivery Date &amp; Time:</string>
    <string name="pick_date_time">Pick your Date &amp; Time</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="fetching_time_slots">Fetching time slots…</string>
    <string name="processing_order">Processing order…</string>
    <string name="select_payment_method">Please select a payment method</string>
    <string name="order_placed">Order Placed</string>
    <string name="go_to_home">Go to My Home</string>
    <string name="processing_payment">Processing payment…</string>
    <string name="empty_cart">No items in your cart</string>
    <string name="shop_now">Shop Now</string>
    <string name="loading_orders">Loading orders…</string>
    <string name="format_order_id">#%s</string>
    <string name="loading_order_details">Loading order details…</string>
    <string name="unit_kg">1kg</string>
    <string name="format_quantity">Qty: %d</string>
    <string name="empty_address">You have no addresses</string>
    <string name="empty_order">No order histories</string>
    <string name="loading_addresses">Loading addresses…</string>
    <string name="title_logout">Logout?</string>
    <string name="msg_logout">Are you sure you wish to logout from app?</string>
    <string name="app_share">Download Quikmart app from Google play store\n\nhttp://play.google.com/store/apps/details?id=%s</string>
    <string name="hint_promo">Enter promo code here</string>
    <string name="apply">Apply</string>
    <string name="promo_term1">Some promo codes are not applicable on promo cash.</string>
    <string name="promo_term2"><![CDATA[Some promo codes are not valid on purchase of edible oil, ghee &amp; baby food products.]]></string>
    <string name="something_went_wrong_error_message">Something went wrong</string>
    <string name="hint_email_phone">Enter Email or Mobile</string>
    <string name="hint_password">Enter Password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="hint_phone">Enter Moile Number</string>
    <string name="hint_name">Enter your Name</string>
    <string name="hint_email">Ener Email Id</string>
    <string name="hint_emailid">Enter rgistered email id</string>
    <string name="hint_otp">Enter OTP sent to your email id</string>
    <string name="hint_newpassword">Enter new password</string>
    <string name="pleaewait">Please wait...</string>
    <string name="otpsentmessage">An OTP has sent to your email id, please enter correct otp to reset your password. \nThank you.</string>
    <string name="login">Login</string>
    <string name="ordernow">Place Order</string>
    <string name="hint_confirmpassword">Confirm Password</string>
    <string name="hint_firstname">Enter First Name</string>
    <string name="hint_lastname">Enter Last Name</string>
    <string name="edit">Edit</string>
    <string name="sendlist">Send List</string>
    <string name="sendphoto">Send Photo</string>
    <string name="hint_oldpasword">Enter old password</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="my_wishlist">Wishlist</string>
</resources>
