<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/ll_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_200"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/gradient">

            <TextView
                android:id="@+id/tv_name"
                fontPath="@string/font_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_profile_orange_16dp"
                android:drawablePadding="@dimen/standard"
                android:fontFamily="sans-serif-medium"
                android:gravity="bottom"
                android:paddingStart="@dimen/medium"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/medium"
                android:paddingBottom="@dimen/standard"
                android:text="Shankar Kumar"
                android:textColor="@color/white"
                android:textSize="15sp" />


        <TextView
            android:id="@+id/tv_mobile"
            fontPath="@string/font_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_mobile_orange_16dp"
            android:drawablePadding="@dimen/standard"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:paddingStart="@dimen/medium"
            android:paddingEnd="@dimen/medium"
            android:paddingBottom="@dimen/standard"
            android:text="9663379596"
            android:textColor="@color/white"
            android:textSize="13sp" />
        </LinearLayout>

        <TextView
            fontPath="@string/font_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_category"
            android:paddingStart="@dimen/large"
            android:paddingTop="@dimen/standard"
            android:paddingEnd="@dimen/large"
            android:paddingBottom="@dimen/standard"
            android:text="@string/my_information"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_very_small" />

        <TextView
            android:id="@+id/nav_my_orders"
            style="@style/NavigationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_order_orange_16dp"
            android:text="@string/my_orders" />

        <TextView
            android:id="@+id/nav_my_cart"
            style="@style/NavigationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_cart_orange_16dp"
            android:text="@string/my_cart" />

        <TextView
            android:id="@+id/nav_my_addresses"
            style="@style/NavigationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_address_orange_16dp"
            android:paddingBottom="@dimen/standard"
            android:text="@string/my_addresses" />
        <TextView
            android:id="@+id/nav_my_wishlist"
            style="@style/NavigationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableStart="@drawable/wishlist"
            android:paddingBottom="@dimen/standard"
            android:text="@string/my_wishlist" />

        <TextView
            fontPath="@string/font_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_category"
            android:paddingStart="@dimen/large"
            android:paddingTop="@dimen/standard"
            android:paddingEnd="@dimen/large"
            android:paddingBottom="@dimen/standard"
            android:text="@string/others"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_very_small" />

        <TextView
            android:id="@+id/nav_contact_us"
            style="@style/NavigationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_profile_orange_16dp"
            android:paddingTop="@dimen/standard"
            android:text="@string/contact_us" />

        <TextView
            android:id="@+id/nav_privacy"
            style="@style/NavigationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableStart="@drawable/privacy_policy"
            android:paddingTop="@dimen/standard"
            android:text="@string/privacypolicy" />

        <TextView
            android:id="@+id/nav_rate_us"
            style="@style/NavigationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_star_orange_16dp"
            android:text="@string/rate_us" />

        <TextView
            android:id="@+id/nav_share"
            style="@style/NavigationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_share_orange_16dp"
            android:text="@string/share" />

        <TextView
            style="@style/NavigationText"
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/celias_medium"
            android:drawableStart="@drawable/change_password"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:text="Change Password"
            android:paddingLeft="4dp"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/nav_about_us"
            style="@style/NavigationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_user_info_orange_16dp"
            android:text="@string/about_us" />

        <TextView
            android:id="@+id/nav_logout"
            style="@style/NavigationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_power_orange_16dp"
            android:text="@string/logout" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
