<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/white"
	android:orientation="vertical"
	tools:ignore="MissingPrefix">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/standard">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/til_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/et_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/et_background"
				android:hint="@string/name"
				android:inputType="textCapWords"
				android:textColor="@color/black"
				android:textSize="@dimen/text_normal"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/til_address1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/thick"
			app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/et_address1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/et_background"
				android:hint="@string/address1"
				android:inputType="textCapWords"
				android:textColor="@color/black"
				android:textSize="@dimen/text_normal"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/til_address2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/thick"
			app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/et_address2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/et_background"
				android:hint="@string/address2"
				android:inputType="textCapWords"
				android:textColor="@color/black"
				android:textSize="@dimen/text_normal"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/til_landmark"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/thick"
			app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/et_landmark"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/et_background"
				android:hint="@string/landmark"
				android:inputType="textCapWords"
				android:textColor="@color/black"
				android:textSize="@dimen/text_normal"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/til_city"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/thick"
			app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/et_city"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/et_background"
				android:hint="@string/city"
				android:inputType="textCapWords"
				android:textColor="@color/black"
				android:textSize="@dimen/text_normal"/>
		</android.support.design.widget.TextInputLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/thick"
			android:background="@drawable/draw_border_grey">

			<android.support.v7.widget.AppCompatSpinner
				android:id="@+id/acs_state"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/til_pincode"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/thick"
			app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/et_pincode"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/et_background"
				android:hint="@string/pincode"
				android:inputType="number"
				android:textColor="@color/black"
				android:textSize="@dimen/text_normal"/>
		</android.support.design.widget.TextInputLayout>
	</LinearLayout>

	<TextView
		android:id="@+id/tv_add"
		fontPath="@string/font_medium"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/big"
		android:background="@color/colorPrimary"
		android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp"
		android:gravity="center"
		android:padding="@dimen/standard"
		android:text="@string/add"
		android:textAllCaps="true"
		android:textColor="@color/white"
		android:textSize="@dimen/text_medium"/>
</LinearLayout>