<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.bigappcompany.quikmart.activity.OrderDetailsActivity"
	tools:ignore="MissingPrefix">

	<include layout="@layout/toolbar"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<TextView
			fontPath="@string/font_medium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/white"
			android:paddingBottom="@dimen/narrow"
			android:paddingEnd="@dimen/medium"
			android:paddingStart="@dimen/medium"
			android:paddingTop="@dimen/narrow"
			android:text="@string/order_summary"
			android:textColor="@color/black"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/narrow"
			android:background="@drawable/draw_grey_underline_white"
			android:paddingBottom="@dimen/narrow"
			android:paddingEnd="@dimen/medium"
			android:paddingStart="@dimen/medium"
			android:paddingTop="@dimen/standard">

			<TextView
				fontPath="@string/font_medium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/order_number"
				android:textSize="@dimen/text_small"/>

			<TextView
				android:id="@+id/tv_order_id"
				fontPath="@string/font_medium"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="end"
				android:textColor="@color/black"
				android:textSize="@dimen/text_small"
				tools:text="#123123"/>
		</LinearLayout>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/rv_order"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:background="@color/white"
			app:layoutManager="LinearLayoutManager"
			tools:listitem="@layout/item_order_details"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/thick"
			android:background="@color/white"
			android:orientation="vertical"
			android:padding="@dimen/standard">

			<LinearLayout
				android:id="@+id/ll_promo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/white">

				<TextView
					fontPath="@string/font_medium"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/promo_code"
					android:textColor="@color/black"
					android:textSize="@dimen/text_small"/>

				<TextView
					android:id="@+id/tv_promo"
					fontPath="@string/font_medium"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="end"
					android:textColor="@color/black"
					android:textSize="@dimen/text_small"
					tools:text="\u20B9 95"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/thick"
				android:background="@color/white">

				<TextView
					fontPath="@string/font_medium"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/cart_estimated"
					android:textColor="@color/black"/>

				<TextView
					android:id="@+id/tv_total"
					fontPath="@string/font_medium"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="end"
					android:textColor="@color/colorPrimary"
					android:textSize="@dimen/text_small"
					tools:text="\u20B9 95"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/narrow"
				android:background="@color/white">

				<TextView
					fontPath="@string/font_medium"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/order_status"
					android:textSize="@dimen/text_small"/>

				<TextView
					android:id="@+id/tv_order_status"
					fontPath="@string/font_medium"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="end"
					android:textColor="@color/black"
					android:textSize="@dimen/text_small"
					tools:text="shipped"/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/colorPrimary"
			android:orientation="horizontal"
			android:padding="@dimen/thin">

			<TextView
				android:id="@+id/tv_call_us"
				fontPath="@string/font_medium"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:padding="@dimen/standard"
				android:text="@string/call_us"
				android:textAllCaps="true"
				android:textColor="@color/white"
				android:textSize="@dimen/text_medium"/>

			<View
				android:layout_width="0.5dp"
				android:layout_height="match_parent"
				android:background="@color/black"/>

			<TextView
				android:id="@+id/tv_email_us"
				fontPath="@string/font_medium"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:padding="@dimen/standard"
				android:text="@string/email_us"
				android:textAllCaps="true"
				android:textColor="@color/white"
				android:textSize="@dimen/text_medium"/>

			<View
				android:layout_width="0.5dp"
				android:layout_height="match_parent"
				android:background="@color/black"/>

			<TextView
				android:id="@+id/tv_cancel"
				fontPath="@string/font_medium"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:padding="@dimen/standard"
				android:text="@string/cancel"
				android:textAllCaps="true"
				android:textColor="@color/white"
				android:textSize="@dimen/text_medium"/>
		</LinearLayout>
	</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
