<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	android:gravity="center"
	android:orientation="vertical"
	tools:context="com.bigappcompany.quikmart.activity.PostOrderActivity"
	tools:ignore="MissingPrefix">

	<include
		layout="@layout/toolbar"/>

	<View
		android:layout_width="0.5dp"
		android:layout_height="0dp"
		android:layout_weight="1"/>

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@null"
		android:src="@drawable/art_check_orange"/>

	<TextView
		fontPath="@string/font_medium"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/medium"
		android:text="@string/order_placed"
		android:textSize="@dimen/text_medium"/>

	<View
		android:layout_width="@dimen/unit"
		android:layout_height="144dp"
		android:layout_marginTop="@dimen/standard"
		android:background="@drawable/draw_dotted_vertical_line"/>

	<android.support.v7.widget.AppCompatButton
		android:id="@+id/btn_home"
		fontPath="@string/font_medium"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/large"
		android:layout_marginEnd="@dimen/medium"
		android:layout_marginStart="@dimen/medium"
		android:layout_marginTop="@dimen/standard"
		android:background="@color/colorPrimary"
		android:text="@string/go_to_home"
		android:textColor="@color/white"/>
</LinearLayout>
